--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
        <!-- hier zet je de code in de body tags-->
+    <h1>Dit is mijn eerste pagina</h1>
+    <h2>want ik ben aan het leren</h2>
+    <p>om html pagina's te maken</p>
+    <hr>
+
     </body>
 </html>
