--- a/about.html
+++ b/about.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <!-- hier zet je de code in de head tags -->
         <title> Eelco's pagina </title>
-    </header>
-    <main>
+    </head>
+    <body>
        <!-- hier zet je de code in de body tags-->
-     <p>Ik ben Eelco, woon in Utrecht, ik houd van sporten. Ik doe aan hardlopen, tennis en schaatsen</p>
-     <img height="100" src="1595576178655.jpg">
-    </main>
      <nav>
-         <p><a href="index.html">terug naar index</a></p>
-    </nav>
-    
+        <p><a href="index.html">terug naar index</a></p>
+     </nav>
+     <main>
+        <p>Ik ben Eelco en ik sport graag. Ik doe aan hardlopen, tennis en schaatsen</p>
+        <img height="100" src="1595576178655.jpg">
+    </main>
+         
+    </body>
 </html>
