--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- hier zet je de code in de head tags -->
-        <title> Eelco's pagina </title>
-    </head>
-    <body>
-       <!-- hier zet je de code in de body tags-->
-    <h1>Dit is mijn eerste pagina</h1>
-    <h2>want ik ben aan het leren</h2>
-    <p>om html pagina's te maken</p>
-    <hr>
 
-    </body>
+<head>
+    <!-- hier zet je de code in de head tags -->
+    <title> Eelco's pagina</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <h1>Welkom op mijn pagina</h1>
+    </header>
+    <nav>
+        <p><a href="about.html">Meer over mij</a></p>
+    </nav>
+    <main>
+        <!-- hier zet je de code in de body tags-->
+
+        <h2 id="green-background">Introductie</h2>
+        <p class="black-border", id="green-background">De volgende dingen vind ik mooi</p>
+
+        <ul id="green-background">
+            <li>Utrecht</li>
+            <li>Porsche</li>
+            <li>El Greco</li>
+        </ul>
+
+
+
+    </main>
+</body>
+
+
+<footer>
+    <p class="black-border">Bij Eelco Vendrik</p>
+</footer>
+
 </html>
