--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="about.html">Meer over mij</a></li>
-            <li><a href="pagina2.html">Pagina2</a></li> 
+            <li><a href="contact.html">Contact</a></li> 
             <li><a href="pagina3.html">Pagina3</a></li>
         </ul>
     </nav>
