--- a/index.html
+++ b/index.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- hier zet je de code in de head tags -->
-        <title> Eelco's pagina </title>
-    </head>
-    <body>
-       <!-- hier zet je de code in de body tags-->
-    <h1>Dit is mijn eerste pagina</h1>
-    <h2>want ik ben aan het leren</h2>
-    <p>om html pagina's te maken</p>
-    <hr>
 
-    </body>
+<head>
+    <!-- hier zet je de code in de head tags -->
+    <title> Welkom bij Kunsthandel Vendrik voor al uw kunst</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+
+    <nav>
+        <ul>
+            <li><a href="info.html">Info</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Kunsthandel Vendrik</h1>
+    </header>
+    <main>
+        <section id="kunst">
+            <ul>
+                <li>
+                    <img height="300" src="Rob_Claus_Feestschip.JPG">
+                    <span>Rob Claus - Feestschip</span>
+                </li>
+                <li>
+                    <img height="300" src="Marche_a_poisson_Godthab.JPG">
+                    <span>Onbekend - Marche a possion Godthab</span>
+                </li>
+                <li>
+                    <img height="300" src="Jos_Bamps_Zonder_Titel.jpg">
+                    <span>Jos Bamps - Zonder titel</span>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+</body>
+
+
+<footer>
+    <p>Copyright Kunsthandel Vendrik</p>
+</footer>
+
 </html>
