--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- hier zet je de code in de head tags -->
-        <title> Eelco's pagina </title>
-    </head>
-    <body>
-       <!-- hier zet je de code in de body tags-->
-    <h1>Dit is mijn eerste pagina</h1>
-    <h2>want ik ben aan het leren</h2>
-    <p>om html pagina's te maken</p>
-    <hr>
 
-    </body>
+<head>
+    <!-- hier zet je de code in de head tags -->
+    <title> Javascript speeltuin</title>
+    </head>
+
+<body>
+<h1>Mijn eerste Javascript speeltuin</h1>
+</body>
+<script src="index.js"></script>
 </html>
