--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <!-- hier zet je de code in de head tags -->
-    <title> Welkom bij Kunsthandel Vendrik voor al uw kunst</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Eindopdracht</title>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="resetstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="info.html">Info</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <header>
-        <h1>Kunsthandel Vendrik</h1>
-    </header>
-    <main>
-        <section id="kunst">
-            <ul>
-                <li>
-                    <img height="300" src="Rob_Claus_Feestschip.JPG">
-                    <span>Rob Claus - Feestschip</span>
-                </li>
-                <li>
-                    <img height="300" src="Marche_a_poisson_Godthab.JPG">
-                    <span>Onbekend - Marche a possion Godthab</span>
-                </li>
-                <li>
-                    <img height="300" src="Jos_Bamps_Zonder_Titel.jpg">
-                    <span>Jos Bamps - Zonder titel</span>
-                </li>
-            </ul>
-        </section>
+<nav class="nav-main">
+    <div class="btn-toggle-nav"></div>
+</nav>
 
-    </main>
+<aside class="nav-sidebar">
+    <ul>
+        <li><span id="home">Home</span></li>
+        <li><span id="red">Red</span></li>
+        <li><span id="orange">Orange</span></li>
+        <li><span id="purple">Purple</span></li>
+        <li><span id="green">Green</span></li>
+    </ul>
+</aside>
+
 </body>
-
-
-<footer>
-    <p>Copyright Kunsthandel Vendrik</p>
-</footer>
-
 </html>
